--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,22 @@ version: "2.1"
 services:
 
   neo4j:
+    build:
+      context: .
     image: neo4j:3.0
     container_name: neo4j-adidas
     ports:
       - 7474:7474
       - 7687:7687
     volumes:
-      - $PWD/neo4j/data:/data:Z
-      - $PWD/neo4j/logs:/logs:Z
+      - ./neo4j/data:/data:Z
+      - ./neo4j/logs:/logs:Z
+    networks:
+      - adidas
 
   postgres:
+    build:
+      context: .
     image: postgres
     container_name: postgres-adidas
     ports:
@@ -20,13 +26,17 @@ services:
     environment:
       POSTGRES_PASSWORD: test
     volumes:
-      - $PWD/postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
+    networks:
+      - adidas
 
   eureka:
     image: jhipster/jhipster-registry
     container_name: eureka-adidas
     ports:
       - "8761:8761"
+    networks:
+      - adidas
 
   adidascitysearch:
     image: mvppoa/adidascitysearch:latest
@@ -35,9 +45,11 @@ services:
       - "8081:8081"
     environment:
       - JHIPSTER_SLEEP=10
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:admin@172.17.0.1:8761/eureka/
-      - SPRING_DATA_NEO4J_URI=http://172.17.0.1:7474
-      - SPRING_APPLICATION_CLOUD_CONFIG_URI=http://admin:admin@172.17.0.1:8761/config
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:admin@eureka:8761/eureka/
+      - SPRING_DATA_NEO4J_URI=http://neo4j:7474
+      - SPRING_APPLICATION_CLOUD_CONFIG_URI=http://admin:admin@eureka:8761/config
+    networks:
+      - adidas
 
   adidascityitinerary:
     image: mvppoa/adidascityitinerary:latest
@@ -46,7 +58,12 @@ services:
       - "8082:8082"
     environment:
       - JHIPSTER_SLEEP=10
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:admin@172.17.0.1:8761/eureka/
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://172.17.0.1:5432/postgres
-      - SPRING_APPLICATION_CLOUD_CONFIG_URI=http://admin:admin@172.17.0.1:8761/config
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:admin@eureka:8761/eureka/
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/postgres
+      - SPRING_APPLICATION_CLOUD_CONFIG_URI=http://admin:admin@eureka:8761/config
+    networks:
+      - adidas
 
+networks:
+  adidas:
+    driver: "bridge"
