--- a/docker-compose-lite.yml
+++ b/docker-compose-lite.yml
@@ -1,18 +1,24 @@
 version: "2.1"
 
+services:version: "2.1"
+
 services:
 
   neo4j:
+    build:
+      context: .
     image: neo4j:3.0
     container_name: neo4j-adidas
     ports:
       - 7474:7474
       - 7687:7687
     volumes:
-      - $PWD/neo4j/data:/data:Z
-      - $PWD/neo4j/logs:/logs:Z
+      - ./neo4j/data:/data:Z
+      - ./neo4j/logs:/logs:Z
 
-  db:
+  postgres:
+    build:
+      context: .
     image: postgres
     container_name: postgres-adidas
     ports:
@@ -20,7 +26,7 @@ services:
     environment:
       POSTGRES_PASSWORD: test
     volumes:
-      - $PWD/postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
 
   eureka:
     image: jhipster/jhipster-registry
